# planinhas_automatizadas

./: README.md  produtos.xlsx  pyproject.toml
.github/workflows/: pipeline.yml
src/: app.py
tests/: testApp.py
