[tool.poetry]
name = "planinhas-automatizadas"
version = "0.1.0"
description = ""
authors = ["Lucas Vieira <lucasvieiranrz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.25.0"
openpyxl = "^3.1.5"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
